# db/src/schemas/timeZones.ts
@@ -1,0 +1,32 @@
+/*
+{
+    $jsonSchema: {
+      bsonType: 'object',
+      title: 'timezones',
+      required: [
+        'countryName',
+        'countryCode2',
+        'timeZone',
+        'utcOffset',
+        'description'
+      ],
+      properties: {
+        countryName: {
+          bsonType: 'string'
+        },
+        countryCode2: {
+          bsonType: 'string'
+        },
+        timeZone: {
+          bsonType: 'string'
+        },
+        utcOffset: {
+          bsonType: 'string'
+        },
+        description: {
+          bsonType: 'string'
+        }
+      }
+    }
+  }
+  */
